[package]
name = "rust_lib_frb_base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.6.0" }
librespot = "0.6.0"
anyhow = "1.0.93"
log = "0.4.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
jni = "0.21"
ndk-context = "0.1"
