[package]
name = "rust_lib_frb_base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.6.0" }
librespot = { path = "../../librespot-certs/" }
anyhow = "1.0.93"
log = "0.4.22"
env_logger = "0.11.5"
android_logger = "0.14.1"
jni = "0.19"
ndk-context = "0.1"
rustls-platform-verifier = "0.3.4"
once_cell = "1.20.2"
rspotify = { version = "0.13.3", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls",
] }
serde = "1.0.215"
serde_json = "1.0.133"
